--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/themify-icons.css">
 </head>
 <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <button onclick="topFunction()" id="myBtn" class="d-none d-sm-block" title="Go to top">
         <i class="ti-arrow-circle-up icon-footer"></i>
     </button>
     <header class="container-fluid container-fluid-header fix-padding">
@@ -322,7 +322,7 @@
     <footer class="footer-web container-fluid fix-padding">
         <div class="content-footer container fix-padding">
             <div class="row fix-margin">
-                <div class="col-xl-2 col-12 fix-padding">
+                <div class="col-xl-2 col-12 fix-padding pl-xl-0">
                     <p class="hapo-erp-footer">hapoERP</p>
                     <p class="copyright d-none d-sm-block">Copyright 2017</p>
                 </div>
@@ -335,14 +335,14 @@
                 </div>
                 <div class="col-xl-2 col-3 d-flex d-xl-block justify-content-center fix-padding">
                     <ul>
-                        <li class="li-big"><a class="big-text-footer" href="#">Learn more</a></li>
+                        <li class="li-big"><a class="big-text-footer text-uppercase" href="#">Learn more</a></li>
                         <li><a class="small-text-footer text-decoration-none" href="#">About us</a></li>
                         <li><a class="small-text-footer text-decoration-none" href="#">About Hapo-ERP</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-2 col-3 d-xl-block d-flex justify-content-center fix-padding">
                     <ul>
-                        <li class="li-big"><a class="big-text-footer" href="#">How to works</a></li>
+                        <li class="li-big"><a class="big-text-footer text-uppercase" href="#">How to works</a></li>
                         <li><a class="small-text-footer text-decoration-none" href="#">About us</a></li>
                         <li><a class="small-text-footer text-decoration-none" href="#">About Hapo-ERP</a></li>
                     </ul>
@@ -354,7 +354,7 @@
                         <li><a class="small-text-footer text-decoration-none" href="#">Privacy Policy</a></li>
                     </ul>
                 </div>  
-                <div class="col-xl-2 col-3 fix-padding d-flex justify-content-between">
+                <div class="col-xl-2 col-3 pr-xl-0 fix-padding d-flex justify-content-between">
                     <i class="ti-facebook icon-footer"></i>
                     <i class="ti-twitter-alt icon-footer"></i>
                     <i class="ti-youtube icon-footer"></i>
